--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
         <div class="side-box">
             <div class="fb-card">
                 <h3>See Inside! 🎀</h3>
-                <a href="https://facebook.com/MakeCase" class="btn" style="background:#1877F2; margin-bottom:0;" target="_blank">Facebook Page</a>
+                <a href="https://www.facebook.com/profile.php?id=61587885576573" class="btn" style="background:#1877F2; margin-bottom:0;" target="_blank">Facebook Page</a>
             </div>
             <div class="story-card">
                 <h3 style="font-family: 'Playfair Display', serif; margin-top: 0;">Our Vision</h3>
