--- a/index.html
+++ b/index.html
@@ -129,11 +129,134 @@
         .form-group label { display: block; font-size: 0.85rem; font-weight: 600; margin-bottom: 6px; color: var(--slate); }
         input, textarea, select { width: 100%; padding: 12px; border: 1px solid #eee; border-radius: 10px; font-family: inherit; box-sizing: border-box; }
         .submit-btn { width: 100%; background: var(--slate); color: white; padding: 15px; border: none; border-radius: 10px; font-weight: 600; cursor: pointer; text-transform: uppercase; }
+
+        /* Bag / Cart */
+        .btn-bag { background: var(--slate); color: white; text-align: center; padding: 12px 15px; border-radius: 12px; border: none; font-weight: 600; text-transform: uppercase; font-size: 0.8rem; cursor: pointer; display: block; width: 100%; margin-bottom: 10px; font-family: inherit; }
+        .btn-bag:hover { background: #3d4745; }
+        .btn-pay { background: var(--cash-green); margin-top: 10px; }
+        .btn-pay:hover { background: #00b82b; }
+
+        .bag-toggle {
+            position: fixed;
+            top: 24px;
+            right: 24px;
+            width: 56px;
+            height: 56px;
+            background: white;
+            border-radius: 50%;
+            box-shadow: 0 4px 20px rgba(0,0,0,0.12);
+            border: 2px solid var(--ribbon-pink);
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            z-index: 100;
+            font-size: 1.4rem;
+        }
+        .bag-toggle:hover { transform: scale(1.05); }
+        .bag-badge {
+            position: absolute;
+            top: -4px;
+            right: -4px;
+            background: var(--gold);
+            color: white;
+            font-size: 0.7rem;
+            font-weight: 700;
+            min-width: 22px;
+            height: 22px;
+            border-radius: 11px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            opacity: 0;
+            transition: opacity 0.2s;
+        }
+        .bag-badge.show { opacity: 1; }
+
+        .bag-overlay {
+            position: fixed;
+            inset: 0;
+            background: rgba(0,0,0,0.3);
+            z-index: 101;
+            opacity: 0;
+            visibility: hidden;
+            transition: opacity 0.3s, visibility 0.3s;
+        }
+        .bag-overlay.open { opacity: 1; visibility: visible; }
+
+        .bag-drawer {
+            position: fixed;
+            top: 0;
+            right: 0;
+            width: 100%;
+            max-width: 380px;
+            height: 100%;
+            background: var(--cream);
+            box-shadow: -10px 0 40px rgba(0,0,0,0.15);
+            z-index: 102;
+            display: flex;
+            flex-direction: column;
+            transform: translateX(100%);
+            transition: transform 0.3s ease;
+        }
+        .bag-drawer.open { transform: translateX(0); }
+
+        .bag-header {
+            padding: 24px;
+            border-bottom: 1px solid rgba(0,0,0,0.08);
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        .bag-header h2 { font-family: 'Playfair Display', serif; margin: 0; font-size: 1.5rem; }
+        .bag-close { background: none; border: none; font-size: 1.5rem; cursor: pointer; color: var(--slate); padding: 0 8px; line-height: 1; }
+        .bag-body { flex: 1; overflow-y: auto; padding: 20px; }
+        .bag-empty { text-align: center; padding: 40px 20px; color: var(--gold); font-style: italic; }
+        .bag-item {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 16px 0;
+            border-bottom: 1px solid rgba(0,0,0,0.06);
+            gap: 12px;
+        }
+        .bag-item-name { font-weight: 600; }
+        .bag-item-price { color: var(--gold); }
+        .bag-item-remove { background: none; border: none; color: #999; cursor: pointer; font-size: 0.75rem; text-decoration: underline; }
+        .bag-item-remove:hover { color: var(--slate); }
+        .bag-footer {
+            padding: 24px;
+            border-top: 1px solid rgba(0,0,0,0.08);
+        }
+        .bag-total { font-size: 1.2rem; font-weight: 700; margin-bottom: 16px; display: flex; justify-content: space-between; }
+        .bag-pay-link { text-align: center; padding: 15px; background: var(--cash-green); color: white; border-radius: 12px; text-decoration: none; font-weight: 600; display: block; }
+        .bag-pay-link:hover { background: #00b82b; color: white; }
         
         footer { text-align: center; padding: 60px 20px; font-size: 0.75rem; color: #2d3634; }
     </style>
 </head>
 <body>
+
+    <button type="button" class="bag-toggle" id="bag-toggle" aria-label="View bag">
+        🛍️
+        <span class="bag-badge" id="bag-badge">0</span>
+    </button>
+
+    <div class="bag-overlay" id="bag-overlay"></div>
+    <div class="bag-drawer" id="bag-drawer">
+        <div class="bag-header">
+            <h2>Your Bag</h2>
+            <button type="button" class="bag-close" id="bag-close" aria-label="Close bag">&times;</button>
+        </div>
+        <div class="bag-body" id="bag-body"></div>
+        <div class="bag-footer" id="bag-footer">
+            <div class="bag-total">
+                <span>Total</span>
+                <span id="bag-total">$0</span>
+            </div>
+            <a href="#" id="bag-pay-link" class="bag-pay-link" style="display:none;" target="_blank">Pay via Cash App</a>
+        </div>
+    </div>
 
     <header>
         <h1>MaKe Case</h1>
@@ -141,9 +264,10 @@
     </header>
 
     <div class="container">
-        <div class="pricing-card">
+        <div class="pricing-card" data-tier="Small" data-price="15">
             <div class="tier-name">Small Case</div>
             <div class="price">$15</div>
+            <button type="button" class="btn-bag add-to-bag">Add to bag</button>
             <a href="https://cash.app/$nickdoin9/15" class="btn" target="_blank">Pay $15</a>
             <details>
                 <summary>Explore the Kit</summary>
@@ -162,9 +286,10 @@
             </details>
         </div>
 
-        <div class="pricing-card" style="border: 2px solid var(--gold);">
+        <div class="pricing-card" style="border: 2px solid var(--gold);" data-tier="Medium" data-price="25">
             <div class="tier-name">Medium Case</div>
             <div class="price">$25</div>
+            <button type="button" class="btn-bag add-to-bag">Add to bag</button>
             <a href="https://cash.app/$nickdoin9/25" class="btn" target="_blank">Pay $25</a>
             <details>
                 <summary>Explore the Kit</summary>
@@ -183,9 +308,10 @@
             </details>
         </div>
 
-        <div class="pricing-card">
+        <div class="pricing-card" data-tier="Large" data-price="35">
             <div class="tier-name">Large Case</div>
             <div class="price">$35</div>
+            <button type="button" class="btn-bag add-to-bag">Add to bag</button>
             <a href="https://cash.app/$nickdoin9/35" class="btn" target="_blank">Pay $35</a>
             <details>
                 <summary>Explore the Kit</summary>
@@ -265,5 +391,104 @@
 
     <footer>&copy; 2026 MaKe Case. | Prepared &amp; Aesthetic</footer>
 
+    <script>
+        const BAG_KEY = 'makecase_bag';
+        const CASHTAG = 'nickdoin9';
+
+        function getBag() {
+            try {
+                const data = localStorage.getItem(BAG_KEY);
+                return data ? JSON.parse(data) : [];
+            } catch {
+                return [];
+            }
+        }
+
+        function saveBag(bag) {
+            localStorage.setItem(BAG_KEY, JSON.stringify(bag));
+            renderBag();
+        }
+
+        function addToBag(tier, price) {
+            const bag = getBag();
+            const existing = bag.find(i => i.tier === tier);
+            if (existing) {
+                existing.qty += 1;
+            } else {
+                bag.push({ tier, price: parseInt(price, 10), qty: 1 });
+            }
+            saveBag(bag);
+            openBag();
+        }
+
+        function removeFromBag(tier) {
+            const bag = getBag().filter(i => i.tier !== tier);
+            saveBag(bag);
+        }
+
+        function openBag() {
+            document.getElementById('bag-drawer').classList.add('open');
+            document.getElementById('bag-overlay').classList.add('open');
+            document.body.style.overflow = 'hidden';
+        }
+
+        function closeBag() {
+            document.getElementById('bag-drawer').classList.remove('open');
+            document.getElementById('bag-overlay').classList.remove('open');
+            document.body.style.overflow = '';
+        }
+
+        function renderBag() {
+            const bag = getBag();
+            const total = bag.reduce((sum, i) => sum + i.price * i.qty, 0);
+            const count = bag.reduce((sum, i) => sum + i.qty, 0);
+
+            const badge = document.getElementById('bag-badge');
+            badge.textContent = count;
+            badge.classList.toggle('show', count > 0);
+
+            const body = document.getElementById('bag-body');
+            const footer = document.getElementById('bag-footer');
+            const payLink = document.getElementById('bag-pay-link');
+
+            if (bag.length === 0) {
+                body.innerHTML = '<p class="bag-empty">Your bag is empty.<br>Add a case to get started!</p>';
+                footer.style.display = 'none';
+                return;
+            }
+
+            footer.style.display = 'block';
+            document.getElementById('bag-total').textContent = '$' + total;
+            payLink.href = `https://cash.app/$${CASHTAG}/${total}`;
+            payLink.style.display = 'block';
+
+            body.innerHTML = bag.map(item => `
+                <div class="bag-item">
+                    <div>
+                        <div class="bag-item-name">${item.tier} Case ${item.qty > 1 ? '×' + item.qty : ''}</div>
+                        <div class="bag-item-price">$${item.price}${item.qty > 1 ? ' × ' + item.qty + ' = $' + (item.price * item.qty) : ''}</div>
+                    </div>
+                    <button type="button" class="bag-item-remove" data-tier="${item.tier}">Remove</button>
+                </div>
+            `).join('');
+
+            body.querySelectorAll('.bag-item-remove').forEach(btn => {
+                btn.addEventListener('click', () => removeFromBag(btn.dataset.tier));
+            });
+        }
+
+        document.querySelectorAll('.add-to-bag').forEach(btn => {
+            btn.addEventListener('click', () => {
+                const card = btn.closest('.pricing-card');
+                addToBag(card.dataset.tier, card.dataset.price);
+            });
+        });
+
+        document.getElementById('bag-toggle').addEventListener('click', openBag);
+        document.getElementById('bag-close').addEventListener('click', closeBag);
+        document.getElementById('bag-overlay').addEventListener('click', closeBag);
+
+        renderBag();
+    </script>
 </body>
 </html>
