--- a/index.html
+++ b/index.html
@@ -228,9 +228,17 @@
             padding: 24px;
             border-top: 1px solid rgba(0,0,0,0.08);
         }
+        .bag-shipping { padding: 0 20px 20px; border-top: 1px solid rgba(0,0,0,0.06); margin-top: 10px; padding-top: 20px; }
+        .bag-shipping h3 { font-size: 0.9rem; margin: 0 0 12px; font-family: 'Playfair Display', serif; }
+        .bag-shipping .form-group { margin-bottom: 10px; }
+        .bag-shipping .form-group label { font-size: 0.75rem; }
+        .bag-shipping input, .bag-shipping textarea { padding: 10px; font-size: 0.9rem; }
         .bag-total { font-size: 1.2rem; font-weight: 700; margin-bottom: 16px; display: flex; justify-content: space-between; }
-        .bag-pay-link { text-align: center; padding: 15px; background: var(--cash-green); color: white; border-radius: 12px; text-decoration: none; font-weight: 600; display: block; }
-        .bag-pay-link:hover { background: #00b82b; color: white; }
+        .bag-pay-btn { width: 100%; padding: 15px; background: var(--cash-green); color: white; border: none; border-radius: 12px; font-weight: 600; font-size: 0.9rem; cursor: pointer; font-family: inherit; text-transform: uppercase; }
+        .bag-pay-btn:hover:not(:disabled) { background: #00b82b; }
+        .bag-pay-btn:disabled { opacity: 0.7; cursor: not-allowed; }
+        .bag-pay-error { color: #c44; font-size: 0.8rem; margin-top: 8px; display: none; }
+        .bag-pay-error.show { display: block; }
         
         footer { text-align: center; padding: 60px 20px; font-size: 0.75rem; color: #2d3634; }
     </style>
@@ -249,12 +257,28 @@
             <button type="button" class="bag-close" id="bag-close" aria-label="Close bag">&times;</button>
         </div>
         <div class="bag-body" id="bag-body"></div>
-        <div class="bag-footer" id="bag-footer">
+        <div class="bag-footer" id="bag-footer" style="display:none;">
+            <div class="bag-shipping">
+                <h3>Shipping — required before payment</h3>
+                <div class="form-group">
+                    <label for="bag-name">Full Name</label>
+                    <input type="text" id="bag-name" placeholder="e.g. Jane Doe" autocomplete="name">
+                </div>
+                <div class="form-group">
+                    <label for="bag-cashtag">Your $Cashtag</label>
+                    <input type="text" id="bag-cashtag" placeholder="e.g. $johndoe" autocomplete="username">
+                </div>
+                <div class="form-group">
+                    <label for="bag-address">Shipping Address</label>
+                    <textarea id="bag-address" rows="3" placeholder="Street, City, State, ZIP" autocomplete="street-address"></textarea>
+                </div>
+            </div>
             <div class="bag-total">
                 <span>Total</span>
                 <span id="bag-total">$0</span>
             </div>
-            <a href="#" id="bag-pay-link" class="bag-pay-link" style="display:none;" target="_blank">Pay via Cash App</a>
+            <button type="button" id="bag-pay-btn" class="bag-pay-btn">Pay via Cash App</button>
+            <p id="bag-pay-error" class="bag-pay-error">Please fill in all shipping fields.</p>
         </div>
     </div>
 
@@ -347,7 +371,8 @@
 
     <div class="bottom-section">
         <div class="shipping-box">
-            <h2 style="font-family:'Playfair Display'; margin-top:0;">Shipping Info</h2>
+            <h2 style="font-family:'Playfair Display'; margin-top:0;">Custom Orders &amp; Shipping</h2>
+            <p style="font-size: 0.85rem; color: #666; margin: 0 0 15px;">Use the bag above to add cases, enter shipping, and pay in one flow. Use this form for custom orders, add-ons, or if you paid directly and need to send your address.</p>
             <form action="https://formspree.io/f/mykdwplv" method="POST">
                 <div class="form-group">
                     <label for="name">Full Name</label>
@@ -394,6 +419,7 @@
     <script>
         const BAG_KEY = 'makecase_bag';
         const CASHTAG = 'nickdoin9';
+        const FORMSPREE_URL = 'https://formspree.io/f/mykdwplv';
 
         function getBag() {
             try {
@@ -449,7 +475,6 @@
 
             const body = document.getElementById('bag-body');
             const footer = document.getElementById('bag-footer');
-            const payLink = document.getElementById('bag-pay-link');
 
             if (bag.length === 0) {
                 body.innerHTML = '<p class="bag-empty">Your bag is empty.<br>Add a case to get started!</p>';
@@ -459,8 +484,7 @@
 
             footer.style.display = 'block';
             document.getElementById('bag-total').textContent = '$' + total;
-            payLink.href = `https://cash.app/$${CASHTAG}/${total}`;
-            payLink.style.display = 'block';
+            document.getElementById('bag-pay-error').classList.remove('show');
 
             body.innerHTML = bag.map(item => `
                 <div class="bag-item">
@@ -476,6 +500,55 @@
                 btn.addEventListener('click', () => removeFromBag(btn.dataset.tier));
             });
         }
+
+        async function handlePay() {
+            const name = (document.getElementById('bag-name')?.value || '').trim();
+            const cashtag = (document.getElementById('bag-cashtag')?.value || '').trim();
+            const address = (document.getElementById('bag-address')?.value || '').trim();
+            const errorEl = document.getElementById('bag-pay-error');
+            const btn = document.getElementById('bag-pay-btn');
+
+            if (!name || !cashtag || !address) {
+                errorEl.textContent = 'Please fill in all shipping fields before paying.';
+                errorEl.classList.add('show');
+                return;
+            }
+
+            const bag = getBag();
+            const total = bag.reduce((sum, i) => sum + i.price * i.qty, 0);
+            const orderStr = bag.map(i => `${i.tier} Case ×${i.qty} ($${i.price * i.qty})`).join(', ');
+
+            errorEl.classList.remove('show');
+            btn.disabled = true;
+            btn.textContent = 'Submitting…';
+
+            try {
+                const fd = new FormData();
+                fd.append('name', name);
+                fd.append('cashtag', cashtag);
+                fd.append('order', orderStr);
+                fd.append('address', address);
+
+                const res = await fetch(FORMSPREE_URL, {
+                    method: 'POST',
+                    body: fd,
+                    headers: { 'Accept': 'application/json' }
+                });
+
+                if (!res.ok) throw new Error('Failed to save shipping');
+                window.open(`https://cash.app/$${CASHTAG}/${total}`, '_blank');
+                saveBag([]);
+                closeBag();
+            } catch (err) {
+                errorEl.textContent = 'Could not save shipping. Please try again or use the form below.';
+                errorEl.classList.add('show');
+            } finally {
+                btn.disabled = false;
+                btn.textContent = 'Pay via Cash App';
+            }
+        }
+
+        document.getElementById('bag-pay-btn').addEventListener('click', handlePay);
 
         document.querySelectorAll('.add-to-bag').forEach(btn => {
             btn.addEventListener('click', () => {
